# console-chess

./: .gitignore  CMakeLists.txt  README.md
include/: colors.hpp  functions.hpp  game.hpp
src/: colors.cpp  game.cpp  main.cpp
